# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Debug.md  Dockerfile  LICENSE  README.md  Review.md  catalog.json  concise.md
backend/: ai.py  database.py  doc_configs.py  main.py  pyproject.toml
backend/doc_configs/: ai_addendum.py  baa.py  csa.py  design_partner.py  dpa.py  mutual_nda.py  partnership.py  pilot.py  psa.py  shared.py  sla.py  software_license.py
backend/tests/: test_ai.py  test_auth.py  test_chat_integration.py  test_documents.py  test_main.py
docs/superpowers/plans/: 2026-03-14-codebase-fixes.md
frontend/: jest.config.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/__tests__/: ChatPanel.test.tsx  NdaForm.test.tsx  NdaPdf.test.tsx  NdaPreview.test.tsx  api.test.ts  page.test.tsx  types.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: ChatPanel.tsx  DocPdf.tsx  DocPicker.tsx  DocPreview.tsx  NdaForm.tsx  NdaPdf.tsx  NdaPreview.tsx  TemplatePdf.tsx  TemplatePreview.tsx
frontend/e2e/: accessibility.spec.ts  mobile.spec.ts  nda-creator.spec.ts  pdf-download.spec.ts
frontend/lib/: api.ts  chat-storage.ts  doc-registry.ts  doc-schema.ts  doc-utils.ts  parse-terms.ts  terms-loader.ts  types.ts
frontend/lib/schemas/: ai-addendum.ts  baa.ts  csa.ts  design-partner.ts  dpa.ts  mutual-nda.ts  partnership.ts  pilot.ts  psa.ts  sla.ts  software-license.ts
scripts/: start-windows.ps1  stop-windows.ps1
templates/: LICENSE.txt
